# Ymir

./: .gitignore  AGENTS.md  README.md  Ymir.slnx
.voidbot/state/: README.md  ymir.cc
.voidbot/voice/: identity.json
docs/: aetheria-cutover.md  architecture.md  box3d-parity.md  retained-session-contract.md
native/Ymir.Box3D/: CMakeLists.txt  ymir_box3d.c
src/Ymir.Box3D/: Box3DNative.cs  Box3DQueries.cs  Box3DRuntime.cs  Box3DSession.cs  README.md  Ymir.Box3D.csproj
src/Ymir.Box3D/Properties/: AssemblyInfo.cs
src/Ymir.Core/: PhysicsModel.cs  RetainedSessionModel.cs  Ymir.Core.csproj  YmirQueries.cs  YmirServicePublicationDocument.cs  YmirSession.cs  YmirSessionCheckpointCodec.cs  YmirSimulator.cs  YmirSoAWorld.cs  YmirWorldSession.cs  YmirWorldStateDocument.cs
src/Ymir.Core/Properties/: AssemblyInfo.cs
src/ymir-daemon/: Program.cs  ymir-daemon.csproj
tests/Ymir.Box3D.Parity/: Box3DOracle.cs  Box3DParityTests.cs  Ymir.Box3D.Parity.csproj
tests/Ymir.Tests/: Ymir.Tests.csproj  YmirServicePublicationTests.cs  YmirSessionTests.cs  YmirSimulatorTests.cs
tools/: persona-remember.ps1  persona-state-read.ps1  verify-aetheria-ymir-cutover.ps1
